--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ build = "build.rs"
 anyhow = "1.0"
 csv = "1.1"
 phf_codegen = "0.10"
+proc-macro2 = "1.0.36"
+proc-quote = "0.4.0"
 
 [dependencies]
 gumdrop = "0.8"
