chore: refactor into macros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,6 @@
 name = "which-codepoint"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[build-dependencies]
-anyhow = "1.0"
-csv = "1.1"
-phf_codegen = "0.10"
-proc-macro2 = "1.0.36"
-proc-quote = "0.4.0"
 
 [dependencies]
 gumdrop = "0.8"
@@ -21,3 +11,5 @@ allsorts = "0.6"
 tracing = "0.1"
 tracing-subscriber = "0.1"
 phf = "0.10"
+
+wcp-macros = { path = "wcp-macros" }
