--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
-name = "which-codepoint"
+name = "cpdump"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 gumdrop = "0.8"
 anyhow = "1.0"
-thiserror = "1.0"
 allsorts = "0.6"
 tracing = "0.1"
 tracing-subscriber = "0.1"
 phf = "0.10"
 
-wcp-macros = { path = "wcp-macros" }
+cpdump-macros = { path = "cpdump-macros" }
