--- a/cpdump-macros-impl/Cargo.toml
+++ b/cpdump-macros-impl/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wcp-macros"
+name = "cpdump-macros-impl"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,10 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+csv = "1.1"
+phf_codegen = "0.10"
 proc-macro2 = "1.0.36"
-syn = "1.0.84"
-
-wcp-macros-impl = { path = "../wcp-macros-impl" }
-
-[lib]
-proc-macro = true
